// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
Object {
  "CacheBehaviors": Object {
    "Items": Array [
      Object {
        "AllowedMethods": Object {
          "CachedMethods": Object {
            "Items": Array [
              "HEAD",
              "GET",
            ],
            "Quantity": 2,
          },
          "Items": Array [
            "HEAD",
            "DELETE",
            "POST",
            "GET",
            "OPTIONS",
            "PUT",
            "PATCH",
          ],
          "Quantity": 7,
        },
        "Compress": true,
        "DefaultTTL": 86400,
        "FieldLevelEncryptionId": "",
        "ForwardedValues": Object {
          "Cookies": Object {
            "Forward": "whitelist",
            "WhitelistedNames": Object {
              "Items": Array [
                "blf-alpha-session",
                "awards-for-all-preview",
              ],
              "Quantity": 2,
            },
          },
          "Headers": Object {
            "Items": Array [
              "Accept",
              "Host",
            ],
            "Quantity": 2,
          },
          "QueryString": true,
          "QueryStringCacheKeys": Object {
            "Items": Array [],
            "Quantity": 0,
          },
        },
        "LambdaFunctionAssociations": Object {
          "Items": Array [],
          "Quantity": 0,
        },
        "MaxTTL": 31536000,
        "MinTTL": 0,
        "PathPattern": "/api/*",
        "SmoothStreaming": false,
        "TargetOriginId": "ELB_LIVE",
        "TrustedSigners": Object {
          "Enabled": false,
          "Items": Array [],
          "Quantity": 0,
        },
        "ViewerProtocolPolicy": "redirect-to-https",
      },
      Object {
        "AllowedMethods": Object {
          "CachedMethods": Object {
            "Items": Array [
              "HEAD",
              "GET",
            ],
            "Quantity": 2,
          },
          "Items": Array [
            "HEAD",
            "DELETE",
            "POST",
            "GET",
            "OPTIONS",
            "PUT",
            "PATCH",
          ],
          "Quantity": 7,
        },
        "Compress": true,
        "DefaultTTL": 86400,
        "FieldLevelEncryptionId": "",
        "ForwardedValues": Object {
          "Cookies": Object {
            "Forward": "whitelist",
            "WhitelistedNames": Object {
              "Items": Array [
                "awards-for-all-preview",
              ],
              "Quantity": 1,
            },
          },
          "Headers": Object {
            "Items": Array [
              "Accept",
              "Host",
            ],
            "Quantity": 2,
          },
          "QueryString": true,
          "QueryStringCacheKeys": Object {
            "Items": Array [],
            "Quantity": 0,
          },
        },
        "LambdaFunctionAssociations": Object {
          "Items": Array [],
          "Quantity": 0,
        },
        "MaxTTL": 31536000,
        "MinTTL": 0,
        "PathPattern": "/funding/grants*",
        "SmoothStreaming": false,
        "TargetOriginId": "ELB_LIVE",
        "TrustedSigners": Object {
          "Enabled": false,
          "Items": Array [],
          "Quantity": 0,
        },
        "ViewerProtocolPolicy": "redirect-to-https",
      },
      Object {
        "AllowedMethods": Object {
          "CachedMethods": Object {
            "Items": Array [
              "HEAD",
              "GET",
            ],
            "Quantity": 2,
          },
          "Items": Array [
            "HEAD",
            "GET",
          ],
          "Quantity": 2,
        },
        "Compress": true,
        "DefaultTTL": 86400,
        "FieldLevelEncryptionId": "",
        "ForwardedValues": Object {
          "Cookies": Object {
            "Forward": "whitelist",
            "WhitelistedNames": Object {
              "Items": Array [
                "blf-alpha-session",
                "awards-for-all-preview",
              ],
              "Quantity": 2,
            },
          },
          "Headers": Object {
            "Items": Array [
              "Accept",
              "Host",
            ],
            "Quantity": 2,
          },
          "QueryString": true,
          "QueryStringCacheKeys": Object {
            "Items": Array [
              "draft",
              "version",
              "social",
              "location",
              "amount",
              "min",
              "max",
            ],
            "Quantity": 7,
          },
        },
        "LambdaFunctionAssociations": Object {
          "Items": Array [],
          "Quantity": 0,
        },
        "MaxTTL": 31536000,
        "MinTTL": 0,
        "PathPattern": "/funding/programmes",
        "SmoothStreaming": false,
        "TargetOriginId": "ELB_LIVE",
        "TrustedSigners": Object {
          "Enabled": false,
          "Items": Array [],
          "Quantity": 0,
        },
        "ViewerProtocolPolicy": "redirect-to-https",
      },
      Object {
        "AllowedMethods": Object {
          "CachedMethods": Object {
            "Items": Array [
              "HEAD",
              "GET",
            ],
            "Quantity": 2,
          },
          "Items": Array [
            "HEAD",
            "GET",
          ],
          "Quantity": 2,
        },
        "Compress": true,
        "DefaultTTL": 86400,
        "FieldLevelEncryptionId": "",
        "ForwardedValues": Object {
          "Cookies": Object {
            "Forward": "whitelist",
            "WhitelistedNames": Object {
              "Items": Array [
                "blf-alpha-session",
                "awards-for-all-preview",
              ],
              "Quantity": 2,
            },
          },
          "Headers": Object {
            "Items": Array [
              "Accept",
              "Host",
            ],
            "Quantity": 2,
          },
          "QueryString": true,
          "QueryStringCacheKeys": Object {
            "Items": Array [
              "draft",
              "version",
              "social",
              "location",
            ],
            "Quantity": 4,
          },
        },
        "LambdaFunctionAssociations": Object {
          "Items": Array [],
          "Quantity": 0,
        },
        "MaxTTL": 31536000,
        "MinTTL": 0,
        "PathPattern": "/funding/programmes/all",
        "SmoothStreaming": false,
        "TargetOriginId": "ELB_LIVE",
        "TrustedSigners": Object {
          "Enabled": false,
          "Items": Array [],
          "Quantity": 0,
        },
        "ViewerProtocolPolicy": "redirect-to-https",
      },
      Object {
        "AllowedMethods": Object {
          "CachedMethods": Object {
            "Items": Array [
              "HEAD",
              "GET",
            ],
            "Quantity": 2,
          },
          "Items": Array [
            "HEAD",
            "GET",
          ],
          "Quantity": 2,
        },
        "Compress": true,
        "DefaultTTL": 86400,
        "FieldLevelEncryptionId": "",
        "ForwardedValues": Object {
          "Cookies": Object {
            "Forward": "whitelist",
            "WhitelistedNames": Object {
              "Items": Array [
                "blf-alpha-session",
                "awards-for-all-preview",
              ],
              "Quantity": 2,
            },
          },
          "Headers": Object {
            "Items": Array [
              "Accept",
              "Host",
            ],
            "Quantity": 2,
          },
          "QueryString": true,
          "QueryStringCacheKeys": Object {
            "Items": Array [
              "draft",
              "version",
              "social",
              "page",
              "programme",
              "tag",
              "doctype",
              "portfolio",
              "q",
              "sort",
            ],
            "Quantity": 10,
          },
        },
        "LambdaFunctionAssociations": Object {
          "Items": Array [],
          "Quantity": 0,
        },
        "MaxTTL": 31536000,
        "MinTTL": 0,
        "PathPattern": "/insights/documents*",
        "SmoothStreaming": false,
        "TargetOriginId": "ELB_LIVE",
        "TrustedSigners": Object {
          "Enabled": false,
          "Items": Array [],
          "Quantity": 0,
        },
        "ViewerProtocolPolicy": "redirect-to-https",
      },
      Object {
        "AllowedMethods": Object {
          "CachedMethods": Object {
            "Items": Array [
              "HEAD",
              "GET",
            ],
            "Quantity": 2,
          },
          "Items": Array [
            "HEAD",
            "GET",
          ],
          "Quantity": 2,
        },
        "Compress": true,
        "DefaultTTL": 86400,
        "FieldLevelEncryptionId": "",
        "ForwardedValues": Object {
          "Cookies": Object {
            "Forward": "whitelist",
            "WhitelistedNames": Object {
              "Items": Array [
                "blf-alpha-session",
                "awards-for-all-preview",
              ],
              "Quantity": 2,
            },
          },
          "Headers": Object {
            "Items": Array [
              "Accept",
              "Host",
            ],
            "Quantity": 2,
          },
          "QueryString": true,
          "QueryStringCacheKeys": Object {
            "Items": Array [
              "draft",
              "version",
              "social",
              "page",
              "tag",
              "author",
              "category",
              "region",
            ],
            "Quantity": 8,
          },
        },
        "LambdaFunctionAssociations": Object {
          "Items": Array [],
          "Quantity": 0,
        },
        "MaxTTL": 31536000,
        "MinTTL": 0,
        "PathPattern": "/news/*",
        "SmoothStreaming": false,
        "TargetOriginId": "ELB_LIVE",
        "TrustedSigners": Object {
          "Enabled": false,
          "Items": Array [],
          "Quantity": 0,
        },
        "ViewerProtocolPolicy": "redirect-to-https",
      },
      Object {
        "AllowedMethods": Object {
          "CachedMethods": Object {
            "Items": Array [
              "HEAD",
              "GET",
            ],
            "Quantity": 2,
          },
          "Items": Array [
            "HEAD",
            "GET",
          ],
          "Quantity": 2,
        },
        "Compress": true,
        "DefaultTTL": 86400,
        "FieldLevelEncryptionId": "",
        "ForwardedValues": Object {
          "Cookies": Object {
            "Forward": "whitelist",
            "WhitelistedNames": Object {
              "Items": Array [
                "blf-alpha-session",
                "awards-for-all-preview",
              ],
              "Quantity": 2,
            },
          },
          "Headers": Object {
            "Items": Array [
              "Accept",
              "Host",
            ],
            "Quantity": 2,
          },
          "QueryString": true,
          "QueryStringCacheKeys": Object {
            "Items": Array [],
            "Quantity": 0,
          },
        },
        "LambdaFunctionAssociations": Object {
          "Items": Array [],
          "Quantity": 0,
        },
        "MaxTTL": 31536000,
        "MinTTL": 0,
        "PathPattern": "/search",
        "SmoothStreaming": false,
        "TargetOriginId": "ELB_LIVE",
        "TrustedSigners": Object {
          "Enabled": false,
          "Items": Array [],
          "Quantity": 0,
        },
        "ViewerProtocolPolicy": "redirect-to-https",
      },
      Object {
        "AllowedMethods": Object {
          "CachedMethods": Object {
            "Items": Array [
              "HEAD",
              "GET",
            ],
            "Quantity": 2,
          },
          "Items": Array [
            "HEAD",
            "DELETE",
            "POST",
            "GET",
            "OPTIONS",
            "PUT",
            "PATCH",
          ],
          "Quantity": 7,
        },
        "Compress": true,
        "DefaultTTL": 86400,
        "FieldLevelEncryptionId": "",
        "ForwardedValues": Object {
          "Cookies": Object {
            "Forward": "whitelist",
            "WhitelistedNames": Object {
              "Items": Array [
                "blf-alpha-session",
                "awards-for-all-preview",
              ],
              "Quantity": 2,
            },
          },
          "Headers": Object {
            "Items": Array [
              "Accept",
              "Host",
            ],
            "Quantity": 2,
          },
          "QueryString": true,
          "QueryStringCacheKeys": Object {
            "Items": Array [
              "draft",
              "version",
              "social",
              "redirectUrl",
              "s",
              "token",
            ],
            "Quantity": 6,
          },
        },
        "LambdaFunctionAssociations": Object {
          "Items": Array [],
          "Quantity": 0,
        },
        "MaxTTL": 31536000,
        "MinTTL": 0,
        "PathPattern": "/user/*",
        "SmoothStreaming": false,
        "TargetOriginId": "ELB_LIVE",
        "TrustedSigners": Object {
          "Enabled": false,
          "Items": Array [],
          "Quantity": 0,
        },
        "ViewerProtocolPolicy": "redirect-to-https",
      },
      Object {
        "AllowedMethods": Object {
          "CachedMethods": Object {
            "Items": Array [
              "HEAD",
              "GET",
            ],
            "Quantity": 2,
          },
          "Items": Array [
            "HEAD",
            "DELETE",
            "POST",
            "GET",
            "OPTIONS",
            "PUT",
            "PATCH",
          ],
          "Quantity": 7,
        },
        "Compress": true,
        "DefaultTTL": 86400,
        "FieldLevelEncryptionId": "",
        "ForwardedValues": Object {
          "Cookies": Object {
            "Forward": "whitelist",
            "WhitelistedNames": Object {
              "Items": Array [
                "awards-for-all-preview",
              ],
              "Quantity": 1,
            },
          },
          "Headers": Object {
            "Items": Array [
              "Accept",
              "Host",
            ],
            "Quantity": 2,
          },
          "QueryString": true,
          "QueryStringCacheKeys": Object {
            "Items": Array [],
            "Quantity": 0,
          },
        },
        "LambdaFunctionAssociations": Object {
          "Items": Array [],
          "Quantity": 0,
        },
        "MaxTTL": 31536000,
        "MinTTL": 0,
        "PathPattern": "/welsh/funding/grants*",
        "SmoothStreaming": false,
        "TargetOriginId": "ELB_LIVE",
        "TrustedSigners": Object {
          "Enabled": false,
          "Items": Array [],
          "Quantity": 0,
        },
        "ViewerProtocolPolicy": "redirect-to-https",
      },
      Object {
        "AllowedMethods": Object {
          "CachedMethods": Object {
            "Items": Array [
              "HEAD",
              "GET",
            ],
            "Quantity": 2,
          },
          "Items": Array [
            "HEAD",
            "GET",
          ],
          "Quantity": 2,
        },
        "Compress": true,
        "DefaultTTL": 86400,
        "FieldLevelEncryptionId": "",
        "ForwardedValues": Object {
          "Cookies": Object {
            "Forward": "whitelist",
            "WhitelistedNames": Object {
              "Items": Array [
                "blf-alpha-session",
                "awards-for-all-preview",
              ],
              "Quantity": 2,
            },
          },
          "Headers": Object {
            "Items": Array [
              "Accept",
              "Host",
            ],
            "Quantity": 2,
          },
          "QueryString": true,
          "QueryStringCacheKeys": Object {
            "Items": Array [
              "draft",
              "version",
              "social",
              "location",
              "amount",
              "min",
              "max",
            ],
            "Quantity": 7,
          },
        },
        "LambdaFunctionAssociations": Object {
          "Items": Array [],
          "Quantity": 0,
        },
        "MaxTTL": 31536000,
        "MinTTL": 0,
        "PathPattern": "/welsh/funding/programmes",
        "SmoothStreaming": false,
        "TargetOriginId": "ELB_LIVE",
        "TrustedSigners": Object {
          "Enabled": false,
          "Items": Array [],
          "Quantity": 0,
        },
        "ViewerProtocolPolicy": "redirect-to-https",
      },
      Object {
        "AllowedMethods": Object {
          "CachedMethods": Object {
            "Items": Array [
              "HEAD",
              "GET",
            ],
            "Quantity": 2,
          },
          "Items": Array [
            "HEAD",
            "GET",
          ],
          "Quantity": 2,
        },
        "Compress": true,
        "DefaultTTL": 86400,
        "FieldLevelEncryptionId": "",
        "ForwardedValues": Object {
          "Cookies": Object {
            "Forward": "whitelist",
            "WhitelistedNames": Object {
              "Items": Array [
                "blf-alpha-session",
                "awards-for-all-preview",
              ],
              "Quantity": 2,
            },
          },
          "Headers": Object {
            "Items": Array [
              "Accept",
              "Host",
            ],
            "Quantity": 2,
          },
          "QueryString": true,
          "QueryStringCacheKeys": Object {
            "Items": Array [
              "draft",
              "version",
              "social",
              "location",
            ],
            "Quantity": 4,
          },
        },
        "LambdaFunctionAssociations": Object {
          "Items": Array [],
          "Quantity": 0,
        },
        "MaxTTL": 31536000,
        "MinTTL": 0,
        "PathPattern": "/welsh/funding/programmes/all",
        "SmoothStreaming": false,
        "TargetOriginId": "ELB_LIVE",
        "TrustedSigners": Object {
          "Enabled": false,
          "Items": Array [],
          "Quantity": 0,
        },
        "ViewerProtocolPolicy": "redirect-to-https",
      },
      Object {
        "AllowedMethods": Object {
          "CachedMethods": Object {
            "Items": Array [
              "HEAD",
              "GET",
            ],
            "Quantity": 2,
          },
          "Items": Array [
            "HEAD",
            "GET",
          ],
          "Quantity": 2,
        },
        "Compress": true,
        "DefaultTTL": 86400,
        "FieldLevelEncryptionId": "",
        "ForwardedValues": Object {
          "Cookies": Object {
            "Forward": "whitelist",
            "WhitelistedNames": Object {
              "Items": Array [
                "blf-alpha-session",
                "awards-for-all-preview",
              ],
              "Quantity": 2,
            },
          },
          "Headers": Object {
            "Items": Array [
              "Accept",
              "Host",
            ],
            "Quantity": 2,
          },
          "QueryString": true,
          "QueryStringCacheKeys": Object {
            "Items": Array [
              "draft",
              "version",
              "social",
              "page",
              "programme",
              "tag",
              "doctype",
              "portfolio",
              "q",
              "sort",
            ],
            "Quantity": 10,
          },
        },
        "LambdaFunctionAssociations": Object {
          "Items": Array [],
          "Quantity": 0,
        },
        "MaxTTL": 31536000,
        "MinTTL": 0,
        "PathPattern": "/welsh/insights/documents*",
        "SmoothStreaming": false,
        "TargetOriginId": "ELB_LIVE",
        "TrustedSigners": Object {
          "Enabled": false,
          "Items": Array [],
          "Quantity": 0,
        },
        "ViewerProtocolPolicy": "redirect-to-https",
      },
      Object {
        "AllowedMethods": Object {
          "CachedMethods": Object {
            "Items": Array [
              "HEAD",
              "GET",
            ],
            "Quantity": 2,
          },
          "Items": Array [
            "HEAD",
            "GET",
          ],
          "Quantity": 2,
        },
        "Compress": true,
        "DefaultTTL": 86400,
        "FieldLevelEncryptionId": "",
        "ForwardedValues": Object {
          "Cookies": Object {
            "Forward": "whitelist",
            "WhitelistedNames": Object {
              "Items": Array [
                "blf-alpha-session",
                "awards-for-all-preview",
              ],
              "Quantity": 2,
            },
          },
          "Headers": Object {
            "Items": Array [
              "Accept",
              "Host",
            ],
            "Quantity": 2,
          },
          "QueryString": true,
          "QueryStringCacheKeys": Object {
            "Items": Array [
              "draft",
              "version",
              "social",
              "page",
              "tag",
              "author",
              "category",
              "region",
            ],
            "Quantity": 8,
          },
        },
        "LambdaFunctionAssociations": Object {
          "Items": Array [],
          "Quantity": 0,
        },
        "MaxTTL": 31536000,
        "MinTTL": 0,
        "PathPattern": "/welsh/news/*",
        "SmoothStreaming": false,
        "TargetOriginId": "ELB_LIVE",
        "TrustedSigners": Object {
          "Enabled": false,
          "Items": Array [],
          "Quantity": 0,
        },
        "ViewerProtocolPolicy": "redirect-to-https",
      },
      Object {
        "AllowedMethods": Object {
          "CachedMethods": Object {
            "Items": Array [
              "HEAD",
              "GET",
            ],
            "Quantity": 2,
          },
          "Items": Array [
            "HEAD",
            "GET",
          ],
          "Quantity": 2,
        },
        "Compress": true,
        "DefaultTTL": 86400,
        "FieldLevelEncryptionId": "",
        "ForwardedValues": Object {
          "Cookies": Object {
            "Forward": "whitelist",
            "WhitelistedNames": Object {
              "Items": Array [
                "blf-alpha-session",
                "awards-for-all-preview",
              ],
              "Quantity": 2,
            },
          },
          "Headers": Object {
            "Items": Array [
              "Accept",
              "Host",
            ],
            "Quantity": 2,
          },
          "QueryString": true,
          "QueryStringCacheKeys": Object {
            "Items": Array [],
            "Quantity": 0,
          },
        },
        "LambdaFunctionAssociations": Object {
          "Items": Array [],
          "Quantity": 0,
        },
        "MaxTTL": 31536000,
        "MinTTL": 0,
        "PathPattern": "/welsh/search",
        "SmoothStreaming": false,
        "TargetOriginId": "ELB_LIVE",
        "TrustedSigners": Object {
          "Enabled": false,
          "Items": Array [],
          "Quantity": 0,
        },
        "ViewerProtocolPolicy": "redirect-to-https",
      },
      Object {
        "AllowedMethods": Object {
          "CachedMethods": Object {
            "Items": Array [
              "HEAD",
              "GET",
            ],
            "Quantity": 2,
          },
          "Items": Array [
            "HEAD",
            "GET",
          ],
          "Quantity": 2,
        },
        "Compress": true,
        "DefaultTTL": 86400,
        "FieldLevelEncryptionId": "",
        "ForwardedValues": Object {
          "Cookies": Object {
            "Forward": "none",
          },
          "Headers": Object {
            "Items": Array [],
            "Quantity": 0,
          },
          "QueryString": true,
          "QueryStringCacheKeys": Object {
            "Items": Array [
              "draft",
              "version",
              "social",
            ],
            "Quantity": 3,
          },
        },
        "LambdaFunctionAssociations": Object {
          "Items": Array [],
          "Quantity": 0,
        },
        "MaxTTL": 31536000,
        "MinTTL": 0,
        "PathPattern": "assets/*",
        "SmoothStreaming": false,
        "TargetOriginId": "S3-blf-assets",
        "TrustedSigners": Object {
          "Enabled": false,
          "Items": Array [],
          "Quantity": 0,
        },
        "ViewerProtocolPolicy": "redirect-to-https",
      },
      Object {
        "AllowedMethods": Object {
          "CachedMethods": Object {
            "Items": Array [
              "HEAD",
              "GET",
            ],
            "Quantity": 2,
          },
          "Items": Array [
            "HEAD",
            "GET",
          ],
          "Quantity": 2,
        },
        "Compress": true,
        "DefaultTTL": 86400,
        "FieldLevelEncryptionId": "",
        "ForwardedValues": Object {
          "Cookies": Object {
            "Forward": "none",
          },
          "Headers": Object {
            "Items": Array [],
            "Quantity": 0,
          },
          "QueryString": true,
          "QueryStringCacheKeys": Object {
            "Items": Array [
              "draft",
              "version",
              "social",
            ],
            "Quantity": 3,
          },
        },
        "LambdaFunctionAssociations": Object {
          "Items": Array [],
          "Quantity": 0,
        },
        "MaxTTL": 31536000,
        "MinTTL": 0,
        "PathPattern": "media/*",
        "SmoothStreaming": false,
        "TargetOriginId": "S3-blf-assets",
        "TrustedSigners": Object {
          "Enabled": false,
          "Items": Array [],
          "Quantity": 0,
        },
        "ViewerProtocolPolicy": "redirect-to-https",
      },
    ],
    "Quantity": 16,
  },
  "DefaultCacheBehavior": Object {
    "AllowedMethods": Object {
      "CachedMethods": Object {
        "Items": Array [
          "HEAD",
          "GET",
        ],
        "Quantity": 2,
      },
      "Items": Array [
        "HEAD",
        "DELETE",
        "POST",
        "GET",
        "OPTIONS",
        "PUT",
        "PATCH",
      ],
      "Quantity": 7,
    },
    "Compress": true,
    "DefaultTTL": 86400,
    "FieldLevelEncryptionId": "",
    "ForwardedValues": Object {
      "Cookies": Object {
        "Forward": "whitelist",
        "WhitelistedNames": Object {
          "Items": Array [
            "blf-alpha-session",
            "awards-for-all-preview",
          ],
          "Quantity": 2,
        },
      },
      "Headers": Object {
        "Items": Array [
          "Accept",
          "Host",
        ],
        "Quantity": 2,
      },
      "QueryString": true,
      "QueryStringCacheKeys": Object {
        "Items": Array [
          "draft",
          "version",
          "social",
        ],
        "Quantity": 3,
      },
    },
    "LambdaFunctionAssociations": Object {
      "Items": Array [],
      "Quantity": 0,
    },
    "MaxTTL": 31536000,
    "MinTTL": 0,
    "SmoothStreaming": false,
    "TargetOriginId": "ELB_LIVE",
    "TrustedSigners": Object {
      "Enabled": false,
      "Items": Array [],
      "Quantity": 0,
    },
    "ViewerProtocolPolicy": "redirect-to-https",
  },
}
`;

exports[`#makeBehaviourItem should allow all querystrings 1`] = `
Object {
  "AllowedMethods": Object {
    "CachedMethods": Object {
      "Items": Array [
        "HEAD",
        "GET",
      ],
      "Quantity": 2,
    },
    "Items": Array [
      "HEAD",
      "DELETE",
      "POST",
      "GET",
      "OPTIONS",
      "PUT",
      "PATCH",
    ],
    "Quantity": 7,
  },
  "Compress": true,
  "DefaultTTL": 86400,
  "FieldLevelEncryptionId": "",
  "ForwardedValues": Object {
    "Cookies": Object {
      "Forward": "whitelist",
      "WhitelistedNames": Object {
        "Items": Array [
          "example",
        ],
        "Quantity": 1,
      },
    },
    "Headers": Object {
      "Items": Array [
        "*",
      ],
      "Quantity": 1,
    },
    "QueryString": true,
    "QueryStringCacheKeys": Object {
      "Items": Array [],
      "Quantity": 0,
    },
  },
  "LambdaFunctionAssociations": Object {
    "Items": Array [],
    "Quantity": 0,
  },
  "MaxTTL": 31536000,
  "MinTTL": 0,
  "PathPattern": "/example",
  "SmoothStreaming": false,
  "TargetOriginId": "BLF_EXAMPLE",
  "TrustedSigners": Object {
    "Enabled": false,
    "Items": Array [],
    "Quantity": 0,
  },
  "ViewerProtocolPolicy": "redirect-to-https",
}
`;

exports[`#makeBehaviourItem should return cloudfront behaviour for route 1`] = `
Object {
  "AllowedMethods": Object {
    "CachedMethods": Object {
      "Items": Array [
        "HEAD",
        "GET",
      ],
      "Quantity": 2,
    },
    "Items": Array [
      "HEAD",
      "DELETE",
      "POST",
      "GET",
      "OPTIONS",
      "PUT",
      "PATCH",
    ],
    "Quantity": 7,
  },
  "Compress": true,
  "DefaultTTL": 86400,
  "FieldLevelEncryptionId": "",
  "ForwardedValues": Object {
    "Cookies": Object {
      "Forward": "whitelist",
      "WhitelistedNames": Object {
        "Items": Array [
          "example",
        ],
        "Quantity": 1,
      },
    },
    "Headers": Object {
      "Items": Array [
        "Accept",
        "Host",
      ],
      "Quantity": 2,
    },
    "QueryString": true,
    "QueryStringCacheKeys": Object {
      "Items": Array [
        "draft",
        "version",
        "social",
        "q",
      ],
      "Quantity": 4,
    },
  },
  "LambdaFunctionAssociations": Object {
    "Items": Array [],
    "Quantity": 0,
  },
  "MaxTTL": 31536000,
  "MinTTL": 0,
  "PathPattern": "/",
  "SmoothStreaming": false,
  "TargetOriginId": "BLF_EXAMPLE",
  "TrustedSigners": Object {
    "Enabled": false,
    "Items": Array [],
    "Quantity": 0,
  },
  "ViewerProtocolPolicy": "redirect-to-https",
}
`;
